package com.bilibili.designpatterncomponent.bridge;

public interface AirplaneProducer {
    void produce();
}
